2012-02-22  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Disable for now -Wstack-protector, -Wunreachable-code
	and -Wunused-result.

2012-02-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/net.c (grub_cmd_deladdr): Fix index.
	Reported by: Seth Goldberg

2012-02-21  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Add -fno-builtin-gettext on host if NLS is disabled.

2012-02-19  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* util/grub-mkconfig.in (GRUB_CMDLINE_GNUMACH): Export variable.
	* util/grub.d/10_hurd.in: Include GRUB_CMDLINE_GNUMACH in gnumach
	command line.
	* docs/grub.texi (Simple configuration): Document
	GRUB_CMDLINE_GNUMACH.

2012-02-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* conf/Makefile.common (platform_SCRIPTS): New variable.
	(platform_PROGRAMS): Likewise.
	* gentpl.py: Mark *,module and *.image for install.
	* grub-core/gdb_grub.in: Add a notice of expected environment.
	* grub-core/Makefile.core.def (gdb_grub): Mark for install.
	(gmodule.pl): Likewise.

2012-02-18  Vladimir Serbinenko  <phcoder@gmail.com>

	Replace grub_checkkey with grub_getkey_noblock.

	* grub-core/kern/term.c (grub_checkkey): Replaced with ...
	(grub_getkey_noblock): ... this. All users updated.

2012-02-18  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/kern/emu/console.c: Move to ...
	* grub-core/term/emu/console.c: ...here.
	(grub_ncurses_getkey): Fix return value if no key is detected.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/test.h (grub_unit_test_init): Add missing prototype.
	(grub_unit_test_fini): Likewise.
	* tests/lib/unit_test.c (main): Remove extra nested external prototype.

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/test.h (GRUB_UNIT_TEST)

2012-02-12  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/script/execute.c (grub_script_break): Clarify logic.
	Better error handling.
	(grub_script_return): Likewise.